# toodle

./: .gitignore  0_OBJECTIVE.md  0_jobspec_doodle.txt  0_schema.json  AGENTS_PORTING.md  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  PLAN_PORTING.md  README.md  TASK_PORTING.md  adhoc_test_search_index.sh  docker-compose.yml  pyproject.toml  run_evaluation.py  schema.py
archive/: MAKEFILE_CHANGES.md  PORTING_COMPLETE_STAGE1_DOCS.md  SUMMARY_MAKEFILE_UPDATE.md
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/sources/: sources.yml
docs/: API_CONTRACT.md  ARCHITECTURE.md  DECISIONS.md  MODEL.md  STAGE1_ARCHITECTURE.md  STAGE1_MODEL.md  SUBMISSION_PACKAGE.md
exploration/: README.md
exploration/subcategory_independence/: README.md  REPORT.md  encode_data.py  investigate_subcategory.py
scripts/: build_anomaly_baseline.py  build_search_index.py  check_cuda.py  generate_embeddings.py  generate_report.py  package_submission.sh  run_evaluation.py  run_features.py  run_training.py
src/: __init__.py  config.py  mlflow_utils.py
src/anomaly/: __init__.py  baselines.py  detector.py  volume_analyzer.py
src/api/: app.py  schemas.py  search.py
src/data/: __init__.py  loader.py  schema.py  splitter.py
src/evaluation/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  test_anomaly.py  test_api.py  test_bert_model.py  test_catboost.py  test_config.py  test_entities.py  test_evaluation.py  test_features.py  test_generate_report.py  test_hierarchy.py  test_loader.py  test_preprocessing.py  test_run_training.py  test_search.py  test_splitter.py  test_xgboost.py
(+27 files in other folders)
