[tool.poetry]
name = "ticket-classifier"
version = "0.1.0"
description = "Intelligent support ticket categorization system"
authors = ["Achix <achix@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12.12,<3.13"
pandas = "^2.2.3"
numpy = "^1.26.4"
scikit-learn = "^1.5.2"
catboost = "^1.2.7"
xgboost = "^2.1.1"
pandera = {version = "^0.22.1", extras = ["io"]}
joblib = "^1.4.2"
pyarrow = "^18.1.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.9"

[tool.poetry.group.dl.dependencies]
tensorflow = ">=2.20,<2.21"
keras-nlp = ">=0.26,<0.27"

[tool.poetry.group.tracking.dependencies]
mlflow = "^2.17.2"
optuna = "^4.0.0"

[tool.poetry.group.api.dependencies]
fastapi = "^0.115.5"
uvicorn = {version = "^0.32.0", extras = ["standard"]}
pydantic = "^2.9.2"

[tool.poetry.group.dbt.dependencies]
dbt-core = "^1.8.7"
dbt-duckdb = "^1.8.3"
duckdb = "^1.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
ruff = "^0.7.3"
httpx = "^0.27.2"

[tool.poetry.scripts]
verify-kerasnlp = "scripts.verify_kerasnlp:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
